RESOLVED FIXED249834
[WebGPU] WGPUBindGroupEntry::offset is not used while creating the bind group
https://bugs.webkit.org/show_bug.cgi?id=249834
Summary [WebGPU] WGPUBindGroupEntry::offset is not used while creating the bind group
Mike Wyrzykowski
Reported 2022-12-22 21:28:36 PST
[WebGPU] WGPUBindGroupEntry::offset is not used while creating the bind group
Attachments
Mike Wyrzykowski
Comment 1 2022-12-22 21:29:00 PST
Mike Wyrzykowski
Comment 2 2022-12-23 00:16:20 PST
EWS
Comment 3 2023-01-05 15:44:31 PST
Committed 258513@main (6a81017aa27a): <https://commits.webkit.org/258513@main> Reviewed commits have been landed. Closing PR #8042 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.